Event-based  Dataset construction

--- a/NOTEBOOK/01_data_collection.ipynb
+++ b/NOTEBOOK/01_data_collection.ipynb
@@ -2,193 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "mtQDRoEHP2pr",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mtQDRoEHP2pr",
-        "outputId": "c6ea95aa-7446-43f7-c5ab-eca2857d13df"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Defaulting to user installation because normal site-packages is not writeable\n",
-            "Requirement already satisfied: kagglehub in /home/vscode/.local/lib/python3.12/site-packages (0.3.13)\n",
-            "Requirement already satisfied: packaging in /home/vscode/.local/lib/python3.12/site-packages (from kagglehub) (25.0)\n",
-            "Requirement already satisfied: pyyaml in /home/vscode/.local/lib/python3.12/site-packages (from kagglehub) (6.0.3)\n",
-            "Requirement already satisfied: requests in /home/vscode/.local/lib/python3.12/site-packages (from kagglehub) (2.32.5)\n",
-            "Requirement already satisfied: tqdm in /home/vscode/.local/lib/python3.12/site-packages (from kagglehub) (4.67.1)\n",
-            "Requirement already satisfied: charset_normalizer<4,>=2 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (3.4.4)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (3.11)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (2.6.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (2026.1.4)\n",
-            "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.13), please consider upgrading to the latest version (0.4.0).\n"
-          ]
-        },
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Year</th>\n",
-              "      <th>Month</th>\n",
-              "      <th>Day</th>\n",
-              "      <th>Federal Funds Target Rate</th>\n",
-              "      <th>Federal Funds Upper Target</th>\n",
-              "      <th>Federal Funds Lower Target</th>\n",
-              "      <th>Effective Federal Funds Rate</th>\n",
-              "      <th>Real GDP (Percent Change)</th>\n",
-              "      <th>Unemployment Rate</th>\n",
-              "      <th>Inflation Rate</th>\n",
-              "      <th>date</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1954</td>\n",
-              "      <td>7</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0.80</td>\n",
-              "      <td>4.6</td>\n",
-              "      <td>5.8</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1954-07-01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1954</td>\n",
-              "      <td>8</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1.22</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>6.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1954-08-01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>1954</td>\n",
-              "      <td>9</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1.06</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>6.1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1954-09-01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>1954</td>\n",
-              "      <td>10</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0.85</td>\n",
-              "      <td>8.0</td>\n",
-              "      <td>5.7</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1954-10-01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>1954</td>\n",
-              "      <td>11</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0.83</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>5.3</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1954-11-01</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   Year  Month  Day  Federal Funds Target Rate  Federal Funds Upper Target  \\\n",
-              "0  1954      7    1                        NaN                         NaN   \n",
-              "1  1954      8    1                        NaN                         NaN   \n",
-              "2  1954      9    1                        NaN                         NaN   \n",
-              "3  1954     10    1                        NaN                         NaN   \n",
-              "4  1954     11    1                        NaN                         NaN   \n",
-              "\n",
-              "   Federal Funds Lower Target  Effective Federal Funds Rate  \\\n",
-              "0                         NaN                          0.80   \n",
-              "1                         NaN                          1.22   \n",
-              "2                         NaN                          1.06   \n",
-              "3                         NaN                          0.85   \n",
-              "4                         NaN                          0.83   \n",
-              "\n",
-              "   Real GDP (Percent Change)  Unemployment Rate  Inflation Rate       date  \n",
-              "0                        4.6                5.8             NaN 1954-07-01  \n",
-              "1                        NaN                6.0             NaN 1954-08-01  \n",
-              "2                        NaN                6.1             NaN 1954-09-01  \n",
-              "3                        8.0                5.7             NaN 1954-10-01  \n",
-              "4                        NaN                5.3             NaN 1954-11-01  "
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "#!pip install kagglehub\n",
-        "\n",
-        "#import pandas as pd\n",
-        "#import kagglehub\n",
-        "\n",
-        "# Download dataset\n",
-        "#path = kagglehub.dataset_download(\"federalreserve/interest-rates\")\n",
-        "\n",
-        "# Load CSV\n",
-        "#df = pd.read_csv(f\"{path}/index.csv\")\n",
-        "\n",
-        "\n",
-        "# 3. Create a datetime column\n",
-        "#df['date'] = pd.to_datetime(dict(year=df.Year, month=df.Month, day=df.Day))\n",
-        "#df = df.sort_values(\"date\").reset_index(drop=True)\n",
-        "\n",
-        "#df.head() "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "54434104",
       "metadata": {},
       "outputs": [],
@@ -196,6 +10,8 @@
         "import yfinance as yf\n",
         "import pandas as pd\n",
         "from datetime import timedelta\n",
+        "from fredapi import Fred\n",
+        "\n",
         "\n",
         "def build_event_panel(fomc_dates, tickers, vol_window=5):\n",
         "    rows = []\n",
@@ -267,7 +83,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 28,
+      "id": "99e642c8",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Processing SPY...\n",
+            "Processing QQQ...\n",
+            "Processing IWM...\n",
+            "Processing XLF...\n",
+            "  event_date ticker  abnormal_return  volatility_5d  label\n",
+            "0 2015-12-16    SPY         0.000117       0.011856      1\n",
+            "1 2016-12-14    SPY        -0.000137       0.005306      0\n",
+            "2 2017-03-15    SPY         0.000279       0.002837      1\n",
+            "3 2017-06-14    SPY        -0.000272       0.002442      0\n",
+            "4 2017-09-20    SPY        -0.000275       0.000919      0\n",
+            "event_date         0\n",
+            "ticker             0\n",
+            "abnormal_return    0\n",
+            "volatility_5d      0\n",
+            "label              0\n",
+            "dtype: int64\n",
+            "ticker\n",
+            "IWM    37\n",
+            "QQQ    37\n",
+            "SPY    37\n",
+            "XLF    37\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "# FOMC dates\n",
+        "fomc_dates = pd.to_datetime([\n",
+        "    '2015-12-16', '2016-12-14', '2017-03-15', '2017-06-14',\n",
+        "    '2017-09-20', '2017-12-13', '2018-03-21', '2018-06-13',\n",
+        "    '2018-09-26', '2018-12-19', '2019-07-31', '2019-09-18',\n",
+        "    '2020-03-15', '2020-04-29', '2020-06-10', '2020-09-16',\n",
+        "    '2021-03-17', '2021-06-16', '2022-03-16', '2022-05-04',\n",
+        "    '2022-06-15', '2022-07-27', '2022-09-21', '2022-11-02',\n",
+        "    '2022-12-14', '2023-02-01', '2023-03-22', '2023-05-03',\n",
+        "    '2023-06-14', '2023-07-26', '2023-09-20', '2023-11-01',\n",
+        "    '2023-12-13', '2024-01-31', '2024-03-20', '2024-05-01',\n",
+        "    '2024-06-12'\n",
+        "])\n",
+        "\n",
+        "tickers = [\"SPY\", \"QQQ\", \"IWM\", \"XLF\"]\n",
+        "\n",
+        "df = build_event_panel(fomc_dates, tickers)\n",
+        "\n",
+        "print(df.head())\n",
+        "print(df.isna().sum())\n",
+        "print(df.groupby(\"ticker\").size())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
       "id": "8532360e",
       "metadata": {},
       "outputs": [
@@ -284,25 +159,13 @@
             "1 2016-12-14    SPY        -0.000137       0.005306      0\n",
             "2 2017-03-15    SPY         0.000279       0.002837      1\n",
             "3 2017-06-14    SPY        -0.000272       0.002442      0\n",
-            "4 2017-09-20    SPY        -0.000274       0.000919      0\n",
-            "\n",
-            "Missing values:\n",
+            "4 2017-09-20    SPY        -0.000275       0.000919      0\n",
             "event_date         0\n",
             "ticker             0\n",
             "abnormal_return    0\n",
             "volatility_5d      0\n",
             "label              0\n",
             "dtype: int64\n",
-            "\n",
-            "Data types:\n",
-            "event_date         datetime64[ns]\n",
-            "ticker                     object\n",
-            "abnormal_return           float64\n",
-            "volatility_5d             float64\n",
-            "label                       int64\n",
-            "dtype: object\n",
-            "\n",
-            "Observations per ticker:\n",
             "ticker\n",
             "IWM    37\n",
             "QQQ    37\n",
@@ -310,29 +173,117 @@
             "XLF    37\n",
             "dtype: int64\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>event_date</th>\n",
+              "      <th>ticker</th>\n",
+              "      <th>abnormal_return</th>\n",
+              "      <th>volatility_5d</th>\n",
+              "      <th>label</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2015-12-16</td>\n",
+              "      <td>SPY</td>\n",
+              "      <td>0.000117</td>\n",
+              "      <td>0.011856</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2016-12-14</td>\n",
+              "      <td>SPY</td>\n",
+              "      <td>-0.000137</td>\n",
+              "      <td>0.005306</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2017-03-15</td>\n",
+              "      <td>SPY</td>\n",
+              "      <td>0.000279</td>\n",
+              "      <td>0.002837</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2017-06-14</td>\n",
+              "      <td>SPY</td>\n",
+              "      <td>-0.000272</td>\n",
+              "      <td>0.002442</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2017-09-20</td>\n",
+              "      <td>SPY</td>\n",
+              "      <td>-0.000275</td>\n",
+              "      <td>0.000919</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  event_date ticker  abnormal_return  volatility_5d  label\n",
+              "0 2015-12-16    SPY         0.000117       0.011856      1\n",
+              "1 2016-12-14    SPY        -0.000137       0.005306      0\n",
+              "2 2017-03-15    SPY         0.000279       0.002837      1\n",
+              "3 2017-06-14    SPY        -0.000272       0.002442      0\n",
+              "4 2017-09-20    SPY        -0.000275       0.000919      0"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "event_df = build_event_panel(fomc_dates, tickers)\n",
+        "fomc_dates = pd.to_datetime([\n",
+        "'2015-12-16', '2016-12-14', '2017-03-15', '2017-06-14',\n",
+        "'2017-09-20', '2017-12-13', '2018-03-21', '2018-06-13',\n",
+        "'2018-09-26', '2018-12-19', '2019-07-31', '2019-09-18',\n",
+        "'2020-03-15', '2020-04-29', '2020-06-10', '2020-09-16',\n",
+        "'2021-03-17', '2021-06-16', '2022-03-16', '2022-05-04',\n",
+        "'2022-06-15', '2022-07-27', '2022-09-21', '2022-11-02',\n",
+        "'2022-12-14', '2023-02-01', '2023-03-22', '2023-05-03',\n",
+        "'2023-06-14', '2023-07-26', '2023-09-20', '2023-11-01',\n",
+        "'2023-12-13', '2024-01-31', '2024-03-20', '2024-05-01',\n",
+        "'2024-06-12'\n",
+        "])\n",
         "\n",
-        "print(event_df.head())\n",
-        "print(\"\\nMissing values:\")\n",
-        "print(event_df.isna().sum())\n",
+        "tickers = [\"SPY\", \"QQQ\", \"IWM\", \"XLF\"]\n",
         "\n",
-        "print(\"\\nData types:\")\n",
-        "print(event_df.dtypes)\n",
+        "df = build_event_panel(fomc_dates, tickers)\n",
         "\n",
-        "print(\"\\nObservations per ticker:\")\n",
-        "print(event_df.groupby(\"ticker\").size())\n"
+        "print(df.head())\n",
+        "print(df.isna().sum())\n",
+        "print(df.groupby(\"ticker\").size())\n",
+        "df.head()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "00a52beb",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -341,6 +292,7 @@
     },
     "kernelspec": {
       "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
